GpuControlListEntry might need more info for gl_version as well

BUG=651576, 634519

R=kbr@chromium.org, zmo@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2379153002
Cr-Commit-Position: refs/heads/master@{#422393}

Former-commit-id: b53abd7b3c59d221641d07fd25ab26d2ca2f8a22